# fazuh-site

./: .env-example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  input.css
.github/workflows/: _cache-warm.yml  _release.yml  autopromote.yml  build.yml  patch-version.yml  pull-request.yml  release.yml
docs/dev/: commit-changelog.md  scopes.md
src/: app.rs  config.rs  logging.rs  main.rs  rate_limit.rs  server.rs  server_stats.rs  smtp.rs  utils.rs
src/components/: about.rs  collapsible.rs  contact.rs  footer.rs  head.rs  header.rs  hero.rs  mod.rs  projects.rs  skills.rs
src/server/: logging.rs  mod.rs  smtp.rs
src/utils/: logging.rs  smtp.rs  validation.rs
