[package]
name = "fazuh-site"
# Version will be updated by CI in `release` branch.
# Avoid modifying version manually or it will break CI
# DO NOT remove the spaces


version = "0.1.7"


edition = "2024"
default-run = "fazuh-site"

[[bin]]
name = "fazuh-site"
path = "src/main.rs"

[[bin]]
name = "fetch-stats"
path = "src/bin/fetch_stats.rs"

[lints.clippy]
new_without_default = "allow"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
fazuh-utils = { git = "https://github.com/FAZuH/site-utils.git", tag = "v0.1.1", features = ["contact", "embed"] }

# Server-only dependencies
dotenvy = { version = "0.15", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:dotenvy",
    "fazuh-utils/smtp",
]
